fixed overlaping of buttons

--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -110,7 +110,7 @@
     .button-list {
         position: fixed;
         top: 106px;
-        right: 61px;
+        right: 92px;
         z-index: 999;
         overflow: visible;
     }
